# hard-hat-mystery

./: .env.example  .gitignore  README.md  vercel.json
backend/: .env.example  .env.local  pyproject.toml
backend/api/: config.py  main.py
backend/api/models/: save_game.py
backend/api/routes/: auth.py  saves.py
backend/api/services/: firebase.py  firestore.py
frontend/: .env.local  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/game/: page.tsx
frontend/src/app/login/: page.tsx
